--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           keys:
             - v1-go-src-{{ .Branch }}-{{ .Revision }}
       - run: make deps_go_test
-      - run: make test_go
+      - run: make test
       - run: make imports
       - run: git diff --exit-code
 workflows:
